refactor: code smell fix .collect(Collectors.toList()) to .toList()